# dte-service

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/core/: concurrency.py  config.py  crypto.py  logging.py  security.py
app/db/: base.py  init_db.py  models.py  session.py
app/errors/: exceptions.py  handlers.py
app/routers/: admin.py  audit.py  auth.py  bhe.py  books.py  dte.py  exchange.py  machine_keys.py  rcv.py  users.py
app/schemas/: admin.py  audit.py  auth.py  bhe.py  book.py  common.py  dte.py  exchange.py  machine_key.py  rcv.py  user.py  validators.py
app/security/: apikeys.py  auth.py  passwords.py  ratelimit.py  roles.py  service_codes.py  tenant.py
app/services/: audit_service.py  bhe_service.py  book_service.py  certificate_service.py  customer_service.py  dte_service.py  exchange_service.py  folio_service.py  machine_key_service.py  rcv_service.py  sii_credential_service.py  user_service.py
frontend/: .env.example  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  auth.test.ts  auth.tsx  main.tsx  styles.css  types.ts
migrations/: env.py
migrations/versions/: acde811a7ebc_init_schema.py  b2c4d6e8f0a1_folio_assignment_and_indexes.py  c3d5e7f9a1b2_machine_keys.py  (+4 more)
schemas/: README.md
scripts/: purge_audit.py  vendor_engine.ps1  vendor_engine.sh
tests/: conftest.py  test_admin.py  test_audit.py  test_auth.py  test_auth_rcv.py  test_bhe.py  test_bhe_parser.py  test_books.py  test_customer_autogen.py  test_customer_update.py  test_dte.py  test_exchange.py  test_folios.py  test_folios_concurrency.py  test_machine_keys.py  test_sii_credential_service.py  test_sii_key_admin.py  test_soft_delete.py  test_users.py
(+17 files in other folders)
