[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dte_service"
version = "0.1.0"
description = "Servicio web FastAPI multi-cliente sobre el motor dte_chile (SII Chile)"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "cryptography>=42.0",
    "argon2-cffi>=23.1",
    "pyjwt>=2.8",
    # El motor dte_chile NO va en dependencies directas: rompería el editable
    # local de dev y el vendoring offline de Docker (referencia directa de git).
    # Dev: `pip install -e ../dte_chile`. CI: extra `engine` (pineado, abajo).
    # Docker: vendorizado (scripts/vendor_engine.*).
]

[project.optional-dependencies]
# Motor pineado al tag → builds reproducibles (lo usa el CI). Requiere acceso al
# repo privado cl_dte_lib (token de git).
engine = ["dte_chile @ git+https://github.com/leonardodimabe/cl_dte_lib.git@v0.3.0"]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# Depends/Header/etc. en defaults es el idiom obligatorio de FastAPI.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Header",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
]

[tool.mypy]
python_version = "3.11"
files = ["app"]
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
